fix test 3